ensure we don't crash when the parent window is deleted

BUG: 508894


(cherry picked from commit 2ceea82c1ce18c0a10a5c0a299a29323b2974a6d)

Co-authored-by: Christoph Cullmann <christoph@cullmann.dev>